# AT2_experimentation

./: Makefile  README.md  github.txt  pyproject.toml
at2_experimentation/: __init__.py  dataset.py  features.py  plots.py
at2_experimentation/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/forecasting/: prophet_final.pkl  prophet_sales_model_full.pkl
models/predictive/: imputation_model.joblib  xgboost_model.pkl  xgboost_model_new.joblib  xgboost_model_optimized.joblib
notebooks/forecasting/: schou_alexander_ 25636299-forecasting_baseline-simple-Copy1.ipynb  schou_alexander_ 25636299-forecasting_baseline-simple.ipynb  schou_alexander_ 25636299-forecasting_baseline-simple_holiday.ipynb  schou_alexander_ 25636299-forecasting_baseline.ipynb  schou_alexander_ 25636299-forecasting_final.ipynb
notebooks/predictive/: schou_alexander_ 25636299-predictive_EDA.ipynb  schou_alexander_ 25636299-predictive_EDA_only.ipynb  schou_alexander_ 25636299-predictive_baseline-Copy2.ipynb  schou_alexander_ 25636299-predictive_baseline-new.ipynb  schou_alexander_ 25636299-predictive_baseline.ipynb  schou_alexander_ 25636299-predictive_baseline.ipynb.ipynb  schou_alexander_ 25636299-predictive_xgboost.ipynb
src/: function_and_classes.py
