[tool.poetry]
name = "at2-experimentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
